--- a/feetwingreact/src/components/UI/mouse/mouse.scss
+++ b/feetwingreact/src/components/UI/mouse/mouse.scss
@@ -2,7 +2,8 @@
   width: 15px;
   height: 15px;
   border-radius: 50%;
-  background-color: rgb(0, 81, 255);
+  background-color: rgb(50, 115, 255);
+  // background-color: #8c0000;
   position: fixed;
   left: 0;
   right: 0;
